[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "iframe_chatai"
authors = [{name = "Thomas Kluyver", email = "thomas@kluyver.me.uk"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["jupyter-server-proxy >=4.0"]  # v4 required for Unix socket support
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/arang129/iframe_chatai"

[project.entry-points.jupyter_serverproxy_servers]
iframe_chatai = "iframe_chatai:setup_iframe_chatai"
